# simpleapi

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/: release.yml
.github/workflows/: gcp-upload.yml  pyapp-test-lint.yml
my_api/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  search_sync.py
scripts/: linter.sh  tests.sh
tests/: test_api.py
