[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_api"
version = "0.0.1"
description = "A Simple API."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "fastapi[all]",
    "sqlalchemy",
    "pytest",       # testing
    "ruff"          # linting
]